recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:35: error: not found: value k
	motif(length,levels,k)
                            ^